# mlir-practice

./: .gitignore  CMakeLists.txt  README.md  build.sh
docs/: MLIR Setup.md
include/Standalone/: StandaloneTypes.td
test/Standalone/: dummy.mlir
